--- a/.github/configs/cr.yaml
+++ b/.github/configs/cr.yaml
@@ -2,11 +2,11 @@
 index-path: "./index.yaml"
 
 # PGP signing
-sign: true
+sign: false
 key: Argo Helm maintainers
 # keyring:          # Set via env variable CR_KEYRING
 # passphrase-file:  # Set via env variable CR_PASSPHRASE_FILE
 
 # Enable automatic generation of release notes using GitHubs release notes generator.
 # see: https://docs.github.com/en/repositories/releasing-projects-on-github/automatically-generated-release-notes
-generate-release-notes: true
+generate-release-notes: false
